
Commands:
 * Added @moniker, to allow colored names. See 'help monikers' for more.
   Requested by Mikoto Misaka. Idea from [MUX]. [MG]
 * After a year of deprecation, @emit/room has been removed as an alias for
   @lemit. [MG]
 * @chan/list now takes /on and /off switches, to filter the channels shown,
   and a /quiet switch to give a less verbose output. From a suggestion by
   Fraibert. [MG]

Major changes:
 * Regexp $-commands can now used name captures. They can be accessed via
   r(<name>, args). Suggested by Mercutio. [MG]

Hardcode:
 * A number of changes have been made to accomodate monikers. Notably, a lot
   of calls to the Name() macro now use the AName() macro. See the 
   HACKING.185 file for more info. [MG]
 * wild_match_case_r(), regexp_match_case_r(), pe_regs_set_rx_context()
   and pe_regs_set_rx_context_ansi() now take an extra argument, a PE_REGS*
   flag to determine how matching subpatterns are stored in pe_regs. [MG]

Fixes:
 * Commands which take multiple right-hand-side arguments could only have
   8191-length arguments, instead of the usual 8192. Reported by Jules. [MG]
 * It was possible to return non-printable characters from an SQL database,
   which could cause undefined weirdness. Reported by spork. [MG]
 * Many things which listed attributes from a parent, like lattrp() or
   examine/parent, didn't respect no_inherit fully. [MG]
 * Minor crashbug in @boot fixed. Reported by thomaswdyoung. [MG]
 * @grep now ignores ansi when looking for a value. Suggested by Mouvar. [MG]
 * colors() now complains when the color is 'n', 'd' or 'D', since they
   have no actual color value. Reported by spork. [MG]

Minor changes:
 * strreplace() now works harder to keep existing ANSI intact, when you
   replace an un-ansi'd string into an ansi'd one. [MG]
 * colors(...,xterm256) can now return colors 0 to 15, to avoid confusion
   when converting xterm -> hex -> xterm. Reported by Trinsec. [MG]